@@ -10,6 +10,7 @@
 
 
 Version 4.1.6
+ - Fixed: [ 1961288 ] [4.1.5] indi page tab script error if lightbox module not installed (windmillway)
  - Fixed: [ 1953273 ] [4.1.5] Research Assistant code parse errors (andrew_scss)
  - Added: Built-in generation of Google Analytics tracking code (fisharebest)
  - Added: Allow _BRTM and other events as substitutes for BIRT/MARR/DIV/DEAT
